# priyambodo.com-iamrich

./: README.md  published-github.txt  published-website.txt
iamrich.priyambodo.com-v3.0/: 0_💰_IamRich_Financial_Advisor_v3.py  call_gemini.py  pyproject.toml  sh01-poetry-initialization.sh  sh02-streamlit.sh  sh03-cloudrun.sh  version.txt
iamrich.priyambodo.com-v3.0/pages/: 1_💸_Explore_a_Company_for_Investment.py  5_💹_Search_on_Alphabet_Financial_Docs.py  6_💾_Ask_Questions_to_Your_Database.py  7_🎯_Create_Marketing_Campaign_and_Story.py  99_🙎‍♂️_About_this_Application.py
iamrich.priyambodo.com-v3.0/vertexsearch/: index.html  news.html
iamrich.priyambodo.com-v4.0/: 0_💰_IamRich_Financial_Advisor_v4.py  call_gemini.py
iamrich.priyambodo.com-v4.0/datasource/: source.txt
iamrich.priyambodo.com-v4.0/myfunctions/: f_callgemini_vertexai.py  f_calllangchain_vertexsearch.py  f_stockprice.py
iamrich.priyambodo.com-v4.0/notebook/: IamRich_GenAI_App.ipynb
iamrich.priyambodo.com-v4.0/pages/: 4_🗞️_News_from_Top_10_Financial_Sites.py  7_🎯_Create_Marketing_Campaign_and_Story.py
iamrich.priyambodo.com-v4.0/pages/developing/: 11_Load_Approval_App.py
iamrich.priyambodo.com-v4.0/pages/testing/: 101_TestWebsite.py  102_TestUnstructured.py  23_Generate_Caption_from_Image.py
iamrich.priyambodo.com-v4.0/vertexsearch/: alphabet.html
